--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^1.4.0",
-    "@astrojs/starlight": "^0.5.2",
-    "astro": "2.8.3",
-    "sharp": "^0.32.3"
+    "@astrojs/sitemap": "^2.0.1",
+    "@astrojs/starlight": "^0.6.0",
+    "astro": "^2.9.7",
+    "sharp": "^0.32.4"
   },
   "engines": {
     "node": ">=16.17.0",
