--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "clean:build": "shx rm -rf dist",
+    "clean:install": "shx rm -rf node_modules pnpm-debug.log* pnpm-lock.yaml"
   },
   "dependencies": {
     "@astrojs/sitemap": "^2.0.1",
-    "@astrojs/starlight": "^0.6.0",
-    "astro": "^2.9.7",
+    "@astrojs/starlight": "^0.6.1",
+    "astro": "^2.10.1",
     "sharp": "^0.32.4"
+  },
+  "devDependencies": {
+    "auto-changelog": "^2.4.0",
+    "hast-util-from-html": "^1.0.2",
+    "hast-util-to-string": "^2.0.0",
+    "hastscript": "^7.2.0",
+    "rehype": "^12.0.1",
+    "shx": "^0.3.4",
+    "unist-util-visit": "^4.1.2"
   },
   "engines": {
     "node": ">=16.17.0",
