config: update redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,14 +17,8 @@
 
 # Redirects and rewrites — https://docs.netlify.com/routing/redirects/#syntax-for-the-netlify-configuration-file
 [[redirects]]
-  from = "https://docs.gethyas.com/*"
-  to = "https://gethyas.com/docs/:splat"
-  status = 301
-  force = true
-
-[[redirects]]
   from = "/"
-  to = "/docs/getting-started/"
+  to = "/getting-started/"
   status = 301
   force = true
 
