--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/starlight": "^0.12.0",
-    "astro": "^3.4.3",
+    "@astrojs/starlight": "^0.12.1",
+    "@docsearch/css": "^3.5.2",
+    "@docsearch/js": "^3.5.2",
+    "astro": "^3.5.5",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
