--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "docs",
-  "type": "module",
   "version": "0.1.0",
+  "description": "Hyas documentation",
+  "author": "Hyas",
+  "license": "UNLICENSED",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gethyas/docs.git"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "clean:build": "shx rm -rf dist",
-    "clean:install": "shx rm -rf node_modules pnpm-debug.log* pnpm-lock.yaml"
+    "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/starlight": "^0.21.1",
+    "@astrojs/sitemap": "^3.1.4",
+    "@astrojs/starlight": "^0.22.2",
     "@astrojs/starlight-docsearch": "^0.1.0",
-    "astro": "^4.4.15",
-    "sharp": "^0.33.2"
+    "astro": "^4.7.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
-    "auto-changelog": "^2.4.0",
     "hast-util-from-html": "^2.0.1",
     "hast-util-to-string": "^3.0.0",
     "hastscript": "^9.0.0",
     "rehype": "^13.0.1",
-    "shx": "^0.3.4",
     "unist-util-visit": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.14.1",
-    "pnpm": ">=8.10.0"
-  },
-  "packageManager": "pnpm@8.12.0"
+    "node": ">=20.11.0"
+  }
 }
