Update for Thulite

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "docs",
   "version": "0.1.0",
-  "description": "Hyas documentation",
-  "author": "Hyas",
+  "description": "Thulite documentation",
+  "author": "Thulite",
   "license": "UNLICENSED",
   "type": "module",
   "repository": {
