--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.7",
     "hast-util-from-html": "^2.0.1",
     "hast-util-to-string": "^3.0.0",
     "hastscript": "^9.0.0",
