Update for migration from Hyas to Thulite

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.2/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "gethyas/docs" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "thuliteio/docs" }],
   "commit": false,
   "fixed": [],
   "linked": [],
