--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "3.2.1",
-    "@astrojs/starlight": "^0.29.2",
-    "@astrojs/starlight-docsearch": "^0.3.0",
-    "astro": "^4.16.16",
-    "sharp": "^0.33.5"
+    "@astrojs/starlight": "0.30.1",
+    "@astrojs/starlight-docsearch": "0.4.0",
+    "astro": "5.0.5",
+    "sharp": "^0.33.5",
+    "starlight-sidebar-topics": "^0.2.1"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
